# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/shader/: shader.h
resources/: coordinatesystems.vsh  texture.fs  texture.fsh  translation.vsh
src/: 1.7.textures.cpp  1.8.transformations.cpp  1.9.coordinatesystems.cpp  Shader.cpp
